--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
 
 <body>
 
-    <div id="randCon" class="flex">
+    <div id="randCon">
+        <button id="meme" onclick="MEME()">Random Meme</button>
         <button id="random" onclick="RandBoth()">Gen Random MEME and NASA</button>
+        <button id="NASA" onclick="NASA()">Random Picture From NASA</button>
     </div>
 
+    <br>
+    
     <div id="photos">
 
-        <div id="meme" class="flex">
-            <img src="" />
-            <button onclick="MEME()">Random Meme</button>
+        <div id="meme">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/M110_%28transparent_background%29.png/1200px-M110_%28transparent_background%29.png" />
         </div>
 
-        <div id="NASA" class="flex">
-            <img src="" />
-            <button onclick="NASA()">Random Picture From NASA</button>
+        <div id="NASA">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/M110_%28transparent_background%29.png/1200px-M110_%28transparent_background%29.png" />
         </div>
 
     </div>
