--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div id="photos">
 
         <div id="meme">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/M110_%28transparent_background%29.png/1200px-M110_%28transparent_background%29.png" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/HD_transparent_picture.png/1200px-HD_transparent_picture.png" />
         </div>
 
         <div id="NASA">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/M110_%28transparent_background%29.png/1200px-M110_%28transparent_background%29.png" />
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/HD_transparent_picture.png/1200px-HD_transparent_picture.png" />
         </div>
 
     </div>
