--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <br>
     
-    <div id="photos">
+    <div id="photo-con">
 
         <div id="meme">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/HD_transparent_picture.png/1200px-HD_transparent_picture.png" />
