--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div id="randCon">
         <button id="meme" onclick="MEME()">Random Meme</button>
-        <button id="random" onclick="RandBoth()">Gen Random MEME and NASA</button>
-        <button id="NASA" onclick="NASA()">Random Picture From NASA</button>
+        <button id="random" onclick="RandBoth()">Random MEME & Picture from NASA</button>
+        <button id="NASA" onclick="NASA()">Random Picture from NASA</button>
     </div>
 
     <br>
